--- a/SchoolProject.Web/Views/Shared/_Layout.cshtml
+++ b/SchoolProject.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
 
     <!-- Font Awesome -->
-    <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet"/>
+    @* <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet"/> *@
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet"/>
 
 
