--- a/SchoolProject.Web/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/SchoolProject.Web/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,10 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+﻿<script src="~/lib/jquery/jquery.min.js"></script>
+<script src="~/lib/jquery/jquery.slim.min.js"></script>
+
+<script src="~/lib/jquery-validate/additional-methods.min.js"></script>
+<script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+
+<script src="~/lib/jquery-validation-engine/jquery-1.8.2.min.js"></script>
+<script src="~/lib/jquery-validation-engine/jquery.validationEngine.min.js"></script>
+
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
