--- a/SchoolProject.Web/wwwroot/css/site.css
+++ b/SchoolProject.Web/wwwroot/css/site.css
@@ -4,14 +4,20 @@ html {
     min-height: 100%;
 }
 
-
 @media (min-width: 768px) {
     html {
-        font-size: 16px;
+        font-size: 1.2rem;
     }
 }
 
+@media (min-width: 1920px) {
+    html {
+        font-size: 1.0rem;
+    }
+}
 
-body {
-    margin-bottom: 60px;
+@media (min-width: 3860px) {
+    html {
+        font-size: 1.6rem;
+    }
 }
