much more to go

--- a/SchoolProject.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,9 @@
 @using Microsoft.AspNetCore.Identity
+
 @using SchoolProject.Web.Areas.Identity
 @using SchoolProject.Web.Areas.Identity.Pages
+
+@using SchoolProject.Web.Data.Entities.ExtraEntities
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using SchoolProject.Web.Data.Entities.ExtraTables
