--- a/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,17 @@
 @using Microsoft.AspNetCore.Identity
-@using SchoolProject.Web.Data.Entities.ExtraTables
+@using SchoolProject.Web.Data.Entities.ExtraEntities
+
+
 
 @* @inject SignInManager<IdentityUser> SignInManager *@
 @* @inject UserManager<IdentityUser> UserManager *@
 
+
+
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
+
+
 
 <ul class="navbar-nav">
 
