--- a/SchoolProject.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -32,7 +32,9 @@
 <p>
     Don't have access to your authenticator device? You can
     <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode"
-       asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+       asp-route-returnUrl="@Model.ReturnUrl">
+        log in with a recovery code
+    </a>.
 </p>
 
 @section Scripts {
