--- a/SchoolProject.Web/Views/Enrollments/Create.cshtml
+++ b/SchoolProject.Web/Views/Enrollments/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolProject.Web.Data.Entities.Enrollments.Enrollment
+@model SchoolProject.Web.Data.Entities.Enrollments.Enrollment
 
 @{
     ViewData["Title"] = "Create";
@@ -7,34 +7,28 @@
 <h1>Create</h1>
 
 <h4>Enrollment</h4>
-<hr/>
+<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Grade" class="control-label"></label>
-                <input asp-for="Grade" class="form-control"/>
+                <input asp-for="Grade" class="form-control" />
                 <span asp-validation-for="Grade" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted"/>
-                    @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted" /> @Html.DisplayNameFor(model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control"/>
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="UpdatedAt" class="control-label"></label>
-                <input asp-for="UpdatedAt" class="form-control"/>
+                <input asp-for="UpdatedAt" class="form-control" />
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -44,6 +38,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
