--- a/SchoolProject.Web/Views/SchoolClassCourses/Details.cshtml
+++ b/SchoolProject.Web/Views/SchoolClassCourses/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolProject.Web.Data.Entities.SchoolClasses.SchoolClassCourse
+@model SchoolProject.Web.Data.Entities.SchoolClasses.SchoolClassCourse
 
 @{
     ViewData["Title"] = "Details";
@@ -8,35 +8,35 @@
 
 <div>
     <h4>SchoolClassCourse</h4>
-    <hr/>
+    <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdGuid)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdGuid)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.WasDeleted)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.WasDeleted)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UpdatedAt)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdGuid">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
