--- a/SchoolProject.Web/Views/SchoolClassCourses/Index.cshtml
+++ b/SchoolProject.Web/Views/SchoolClassCourses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolProject.Web.Data.Entities.SchoolClasses.SchoolClassCourse>
+@model IEnumerable<SchoolProject.Web.Data.Entities.SchoolClasses.SchoolClassCourse>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,30 +9,29 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped table-hover" id="sortableTable" style="width:100%">
+<table class="table">
     <thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WasDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IdGuid)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.WasDeleted)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedAt)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UpdatedAt)
+            </th>
+            <th></th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model)
-    {
+@foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @Html.DisplayFor(modelItem => item.IdGuid)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WasDeleted)
@@ -44,11 +43,11 @@
                 @Html.DisplayFor(modelItem => item.UpdatedAt)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdGuid">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdGuid">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdGuid">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-    }
+}
     </tbody>
 </table>
