more seeding to correct

--- a/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,7 +1,13 @@
+@using SchoolProject.Web.Data.EntitiesMatrix
+
 @inject SignInManager<User> SignInManager
+
+
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
+
+
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
         <a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a>
