--- a/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,7 @@
 @using SchoolProject.Web.Data.Entities.ExtraEntities
 @using Microsoft.AspNetCore.Identity
+@using SchoolProject.Web.Data.EntitiesMatrix
+
 @* @inject SignInManager<IdentityUser> SignInManager *@
 @* @inject UserManager<IdentityUser> UserManager *@
 
