--- a/SchoolProject.Web/Views/Home/Cookies.cshtml
+++ b/SchoolProject.Web/Views/Home/Cookies.cshtml
@@ -5,6 +5,7 @@
 
     Layout = "_Layout";
     Layout = null; // Define que esta página não utilizará um layout compartilhado
+    Layout = "_Layout1";
 
     // Variáveis do lado do servidor com os valores necessários
     const string projectName = "Gestão Escolar Web";
