--- a/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
@@ -10,7 +10,7 @@
 }
 
 
-<nav class="navbar navbar-expand-xl bg-body-tertiary nav-tabs">
+<nav class="navbar navbar-expand-xxl bg-body-tertiary nav-tabs">
     @* <nav class="navbar navbar-expand bg-body-tertiary nav-tabs"> *@
     @* <nav class="navbar navbar-expand-lg bg-body-tertiary nav-tabs"> *@
 
@@ -18,7 +18,7 @@
 
         @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@ViewData["Title"] - </a> *@
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-            @ViewData["AssemblyName"] - @ViewData["AssemblyVersion"]
+            @ViewData["AssemblyName"]
         </a>
 
 
