--- a/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
         <li class="nav-item">
             <a id="manage" class="nav-link "
                asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                <span class="material-symbols-outlined">settings_account_box</span>
                 Hello @UserManager.GetUserName(User)!
             </a>
         </li>
@@ -21,6 +22,7 @@
             <form id="logoutForm" class="form-inline"
                   asp-area="Identity" asp-page="/Account/Logout"
                   asp-route-returnUrl="@Url.Action("Index", "Home", new {area = ""})">
+                <span class="material-symbols-outlined">logout</span>
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
             </form>
         </li>
@@ -28,10 +30,16 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link " id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link " id="register" asp-area="Identity" asp-page="/Account/Register">
+                <span class="material-symbols-outlined">person_add</span>
+                Register
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link " id="login" asp-area="Identity" asp-page="/Account/Login">
+                <span class="material-symbols-outlined">login</span>
+                Login
+            </a>
         </li>
     }
 
