seed db conversion almost done

--- a/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,5 +1,6 @@
-@using SchoolProject.Web.Data.EntitiesMatrix
-@inject SignInManager<User> SignInManager
+@using SchoolProject.Web.Data.EntitiesOthers
+
+@inject SignInManager<SchoolProject.Web.Data.EntitiesOthers.User> SignInManager
 
 
 @{
