--- a/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,11 @@
-@using SchoolProject.Web.Data.EntitiesMatrix
+@using SchoolProject.Web.Data.EntitiesOthers
 @using Microsoft.AspNetCore.Identity
+
 @* @inject SignInManager<IdentityUser> SignInManager *@
 @* @inject UserManager<IdentityUser> UserManager *@
 
-@inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
+@inject SignInManager<SchoolProject.Web.Data.EntitiesOthers.User> SignInManager
+@inject UserManager<SchoolProject.Web.Data.EntitiesOthers.User> UserManager
 
 
 <ul class="navbar-nav">
