continuing seeding and verifying the final results, more needs to be done

--- a/SchoolProject.Web/Views/Home/Threads.cshtml
+++ b/SchoolProject.Web/Views/Home/Threads.cshtml
@@ -5,6 +5,16 @@
 
 @inject IStringLocalizer<HomeController> Localizer
 
+@model dynamic
+
+@{
+    ViewBag.Title = "App Threads still running";
+    Layout = "_Layout";
+}
+
+<h2>title</h2>
+
+
 @{
     ViewData["Title"] = "Home Page";
 
@@ -38,17 +48,6 @@
 <h1>@ViewData["WelcomeMessage"]</h1>
 
 
-<h1>@Localizer["WelcomeMessage"]</h1>
-
-<p>@Localizer["ContactUs"]</p>
-
-<p>@Localizer["AboutUs"]</p>
-
-
-<br/>
-<p>@allRuntimes</p>
-@Html.Raw(allRuntimesHtml)
-
 <br/>
 <p>@ProcessList.ListOfProcesses</p>
 
@@ -56,14 +55,9 @@
 <p>@ProcessList.ListOfProcesses.Count</p>
 <br/>
 <ul>
+
     @foreach (var process in ProcessList.ListOfProcesses)
     {
         <li>@process</li>
     }
 </ul>
-
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
