--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarSchoolClassesPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarSchoolClassesPanel.cshtml
@@ -17,7 +17,7 @@
 
     <ul class="dropdown-menu">
         <li>
-            <a class="nav-link @(currentController == "SchoolClasses" ? "active" : "")"
+            <a class="dropdown-item @(currentController == "SchoolClasses" ? "active" : "")"
                asp-area="" asp-controller="SchoolClasses" asp-action="Index">
                 <i class="fas fa-person-through-window"></i> SchoolClasses
             </a>
@@ -26,7 +26,7 @@
             <hr class="dropdown-divider">
         </li>
         <li>
-            <a class="nav-link @(currentController == "SchoolClassCourses" ? "active" : "")"
+            <a class="dropdown-item @(currentController == "SchoolClassCourses" ? "active" : "")"
                asp-area="" asp-controller="SchoolClassCourses" asp-action="Index">
                 <i class="fas fa-person-through-window"></i> SchoolClassCourses
             </a>
