--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarStudentsPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarStudentsPanel.cshtml
@@ -17,7 +17,7 @@
 
     <ul class="dropdown-menu">
         <li>
-            <a class="nav-link @(currentController == "Students" ? "active" : "")"
+            <a class="dropdown-item @(currentController == "Students" ? "active" : "")"
                asp-area="" asp-controller="Students" asp-action="Index">
                 <i class="fas fa-person-shelter"></i> Students
             </a>
@@ -26,7 +26,7 @@
             <hr class="dropdown-divider">
         </li>
         <li>
-            <a class="nav-link @(currentController == "StudentCourses" ? "active" : "")"
+            <a class="dropdown-item @(currentController == "StudentCourses" ? "active" : "")"
                asp-area="" asp-controller="StudentCourses" asp-action="Index">
                 <i class="fas fa-person-shelter"></i> StudentCourses
             </a>
