seeding almost done, I hope...

--- a/SchoolProject.Web/Views/Home/Index.cshtml
+++ b/SchoolProject.Web/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@using Microsoft.Extensions.Localization
-
-@using SchoolProject.Web.Controllers
+﻿@using SchoolProject.Web.Controllers
 @using SchoolProject.Web.Data.EntitiesOthers
-
+@using Microsoft.Extensions.Localization
 @inject IStringLocalizer<HomeController> Localizer
 
 @{
