--- a/SchoolProject.Web/Views/SchoolClassCourses/Create.cshtml
+++ b/SchoolProject.Web/Views/SchoolClassCourses/Create.cshtml
@@ -7,23 +7,44 @@
 <h1>Create</h1>
 
 <h4>SchoolClassCourse</h4>
-<hr/>
+<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="SchoolClassId" class="control-label"></label>
+                <select asp-for="SchoolClassId" class ="form-control" asp-items="ViewBag.SchoolClassId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="CourseId" class="control-label"></label>
+                <select asp-for="CourseId" class ="form-control" asp-items="ViewBag.CourseId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted"/> @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted" /> @Html.DisplayNameFor(model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="CreatedById" class="control-label"></label>
+                <select asp-for="CreatedById" class ="form-control" asp-items="ViewBag.CreatedById"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="UpdatedAt" class="control-label"></label>
-                <input asp-for="UpdatedAt" class="form-control"/>
+                <input asp-for="UpdatedAt" class="form-control" />
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+                <label asp-for="UpdatedById" class="control-label"></label>
+                <select asp-for="UpdatedById" class ="form-control" asp-items="ViewBag.UpdatedById"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -32,3 +53,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
