--- a/SchoolProject.Web/Views/TeacherCourses/Index.cshtml
+++ b/SchoolProject.Web/Views/TeacherCourses/Index.cshtml
@@ -46,31 +46,31 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Teacher.Address)
+                @Html.DisplayFor(expression: modelItem => item.Teacher.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Course.Code)
+                @Html.DisplayFor(expression: modelItem => item.Course.Code)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @Html.DisplayFor(expression: modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdGuid)
+                @Html.DisplayFor(expression: modelItem => item.IdGuid)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.WasDeleted)
+                @Html.DisplayFor(expression: modelItem => item.WasDeleted)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
+                @Html.DisplayFor(expression: modelItem => item.CreatedAt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy.Id)
+                @Html.DisplayFor(expression: modelItem => item.CreatedBy.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
+                @Html.DisplayFor(expression: modelItem => item.UpdatedAt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UpdatedBy.Id)
+                @Html.DisplayFor(expression: modelItem => item.UpdatedBy.Id)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
