--- a/SchoolProject.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -26,7 +26,7 @@
                 <div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
                         <input class="form-check-input" asp-for="Input.RememberMe"/>
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                        @Html.DisplayNameFor(expression: m => m.Input.RememberMe)
                     </label>
                 </div>
                 <div>
