--- a/SchoolProject.Web/Views/Courses/Delete.cshtml
+++ b/SchoolProject.Web/Views/Courses/Delete.cshtml
@@ -12,64 +12,64 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
+            @Html.DisplayNameFor(expression: model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
+            @Html.DisplayFor(expression: model => model.Code)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(expression: model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(expression: model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(expression: model => model.Description)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(expression: model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Hours)
+            @Html.DisplayNameFor(expression: model => model.Hours)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Hours)
+            @Html.DisplayFor(expression: model => model.Hours)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreditPoints)
+            @Html.DisplayNameFor(expression: model => model.CreditPoints)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreditPoints)
+            @Html.DisplayFor(expression: model => model.CreditPoints)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProfilePhotoId)
+            @Html.DisplayNameFor(expression: model => model.ProfilePhotoId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProfilePhotoId)
+            @Html.DisplayFor(expression: model => model.ProfilePhotoId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdGuid)
+            @Html.DisplayNameFor(expression: model => model.IdGuid)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdGuid)
+            @Html.DisplayFor(expression: model => model.IdGuid)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WasDeleted)
+            @Html.DisplayNameFor(expression: model => model.WasDeleted)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WasDeleted)
+            @Html.DisplayFor(expression: model => model.WasDeleted)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
+            @Html.DisplayNameFor(expression: model => model.CreatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
+            @Html.DisplayFor(expression: model => model.CreatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
+            @Html.DisplayNameFor(expression: model => model.UpdatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
+            @Html.DisplayFor(expression: model => model.UpdatedAt)
         </dd>
     </dl>
     
