--- a/SchoolProject.Web/Views/Nationalities/Delete.cshtml
+++ b/SchoolProject.Web/Views/Nationalities/Delete.cshtml
@@ -12,34 +12,34 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(expression: model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(expression: model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdGuid)
+            @Html.DisplayNameFor(expression: model => model.IdGuid)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdGuid)
+            @Html.DisplayFor(expression: model => model.IdGuid)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WasDeleted)
+            @Html.DisplayNameFor(expression: model => model.WasDeleted)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WasDeleted)
+            @Html.DisplayFor(expression: model => model.WasDeleted)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
+            @Html.DisplayNameFor(expression: model => model.CreatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
+            @Html.DisplayFor(expression: model => model.CreatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
+            @Html.DisplayNameFor(expression: model => model.UpdatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
+            @Html.DisplayFor(expression: model => model.UpdatedAt)
         </dd>
     </dl>
     
