--- a/SchoolProject.Web/Views/SchoolClassCourses/Details.cshtml
+++ b/SchoolProject.Web/Views/SchoolClassCourses/Details.cshtml
@@ -11,58 +11,58 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SchoolClass)
+            @Html.DisplayNameFor(expression: model => model.SchoolClass)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SchoolClass.Acronym)
+            @Html.DisplayFor(expression: model => model.SchoolClass.Acronym)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Course)
+            @Html.DisplayNameFor(expression: model => model.Course)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Course.Code)
+            @Html.DisplayFor(expression: model => model.Course.Code)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(expression: model => model.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(expression: model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdGuid)
+            @Html.DisplayNameFor(expression: model => model.IdGuid)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdGuid)
+            @Html.DisplayFor(expression: model => model.IdGuid)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WasDeleted)
+            @Html.DisplayNameFor(expression: model => model.WasDeleted)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WasDeleted)
+            @Html.DisplayFor(expression: model => model.WasDeleted)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
+            @Html.DisplayNameFor(expression: model => model.CreatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
+            @Html.DisplayFor(expression: model => model.CreatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
+            @Html.DisplayNameFor(expression: model => model.CreatedBy)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy.Id)
+            @Html.DisplayFor(expression: model => model.CreatedBy.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
+            @Html.DisplayNameFor(expression: model => model.UpdatedAt)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
+            @Html.DisplayFor(expression: model => model.UpdatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedBy)
+            @Html.DisplayNameFor(expression: model => model.UpdatedBy)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedBy.Id)
+            @Html.DisplayFor(expression: model => model.UpdatedBy.Id)
         </dd>
     </dl>
 </div>
