--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarCountriesPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarCountriesPanel.cshtml
@@ -1,8 +1,5 @@
 ﻿@{
-    if (ViewContext.RouteData.Values["controller"] is not string currentController)
-    {
-        throw new ArgumentNullException(nameof(currentController));
-    }
+    var currentController = ViewContext.RouteData.Values["controller"] as string;
     var currentAction = ViewContext.RouteData.Values["action"] as string;
 }
 
