--- a/SchoolProject.Web/Views/TeacherCourses/Create.cshtml
+++ b/SchoolProject.Web/Views/TeacherCourses/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted" /> @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted" /> @Html.DisplayNameFor(expression: model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
